--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/osrf_pycommon
-	previous = 
-	base = f227ca9
+	previous = f227ca9
+	base = 400b915
 	trim = 
 	trimbase = 
